# storyTeller

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  generate_backgrounds.py  kb_retriever.py  llm.py  main.py  package-lock.json  package.json  pyproject.toml  satisfaction_ratings.json  start.sh  streamlit_app.py  streamlit_app_inline.py
.streamlit/: config.toml
260707project/: .dockerignore  .gitignore  260709walkthrough.md  Dockerfile.backend  Dockerfile.frontend  FLOWCHART.md  README.md  TEAM_README.md  TECH_STACK.md  WALKTHROUGH.md  database.py  docker-compose.yml  image_gen.py  kb_retriever.py  llm.py  main.py  models.py  project.yml  pyproject.toml  requirements.txt  schemas.py  streamlit_app.py  streamlit_app_inline.py  streamlit_html_embed.py
260707project/data/: formatted_human_extra.jsonl  formatted_kaggle.jsonl  formatted_train.jsonl  formatted_val.jsonl  rag_eval_results.csv
260707project/index/: index5.html  index6.html  index7.html  index8.html  index9.html
260707project/scratch/: merge_and_split.py  merge_jsonl.py  reset_chroma.py  test_langgraph.py
260707project/scripts/: build_guide_chroma.py  eval_rag.py  migrate_guide_to_mongo.py  migrate_to_mongo.py  preprocess_human.py  preprocess_kaggle.py  project_proposal.md  reembed_passage.py  test_chroma.py  test_guide_chroma.py  test_retriever.py
260707project/storyTeller-SION/: .gitignore  index11.html
260707project/storyTeller-SION/app/: globals.css  page.tsx
Upstage_project_guide(legacy)/: pyproject.toml
YHM_code/: embed_guide.py  ingest.py  load_guide_to_chroma.py  (+6 more)
(+734 files in other folders)
