[project]
name = "260707project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie==1.26.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "json-repair>=0.61.2",
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "langchain-upstage>=0.7.7",
    "langgraph>=1.2.8",
    "motor==3.4.0",
    "numpy>=2.5.1",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymongo<4.7.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sqlmodel>=0.0.39",
    "streamlit>=1.59.1",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-javascript>=0.1.5",
    "uvicorn>=0.50.2",
]
